Fix overflow issue.

--- a/public/milestones_visualization.scss
+++ b/public/milestones_visualization.scss
@@ -4,4 +4,6 @@
   width: 100%;
   height: 100%;
   margin: 10px;
+  position: relative;
+  overflow: scroll;
 }
